--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,36 +1,83 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<div class="background-container">
-    <nav class="navbar">
-        <table>
-            <tr class="logo-container">
-                <td class="logo-text">
-                    <a href="javascript:void(0);">
-                    <img src="assets/images/JAMARI LOGISTIC3.png" alt="Jamari Logistics Logo" class="logo">
-                    </a>
-                </td>
-                <td style="vertical-align: middle;" class="logo-text">
-                    <div class="jamari-logistics">
-                        <span>Jamari</span><br><span id="second-text">Shipping</span>
-                    </div>
-                </td>
-                <td style="vertical-align: middle;">
-                    <ul>
-                    <li><a href="javacript:void(0);">About</a></li>
-                    <li><a href="javacript:void(0);">Services</a></li>
-                    <li><a href="javacript:void(0);">Why Us</a></li>
-                    <li><a href="javascript:void(0);" (click)="routeToContact()">Contact</a></li>
-                    </ul>
-                </td>
-            </tr>
-        </table>        
-    </nav>
+<div class="background-container"  id="home">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+    <div class="container-fluid">
+      <a class="navbar-brand d-flex align-items-center" href="#home">
+        <img src="assets/images/JAMARI.png" alt="Jamari Logistics Logo" width="65" height="65" class="d-inline-block align-top me-2">
+        <div>
+          <span style="font-weight: bold; color: #3a842e;">JAMARI</span><br>
+          <span style="color: #073858;">SHIPPING</span>
+        </div>
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar" aria-controls="mainNavbar" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button><div class="collapse navbar-collapse" id="mainNavbar">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
+          <li class="nav-item"><a class="nav-link" href="#why-us">Why Us</a></li>
+          <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="javascript:void(0);">
+        <img src="assets/images/JAMARI.png" alt="Jamari Logistics Logo" class="logo">
+      </a>
+      <div class="jamari-logistics">
+        <span>Jamari</span><br><span id="second-text">Shipping</span>
+      </div>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="#home">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#about">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#services">Services</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#why-us">Why Us</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#contact">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav> -->
+  <!-- <nav class="navbar">
+    <div class="navbar-left">
+      <a href="javascript:void(0);">
+        <img src="assets/images/JAMARI.png" alt="Jamari Logistics Logo" class="logo">
+      </a>
+      <div class="jamari-logistics">
+        <span>Jamari</span><br><span id="second-text">Shipping</span>
+      </div>
+    </div>
+    <ul class="navbar-links">
+      <li><a href="#home">Home</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#services">Services</a></li>
+      <li><a href="#why-us">Why Us</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>   -->
     <div class="main-content">
         <div class="text-content"  style="margin-left: 5px;text-align: left;margin-bottom: 40px;">
             <label style="width: 250px;font-size: 20px;">Worldwide Logistics, Right to Your Doorstep.</label>
             <br><button mat-button class="mat-button">Explore More ...</button>
         </div>
     </div>
-    <div>
+    <div id="about">
         <section class="about-section text-center text-dark py-5">
             <div class="container">
               <h2>
@@ -56,7 +103,6 @@
         <section class="mv-section">
             <div class="container">
               <div class="row text-center">
-                <!-- Mission -->
                 <div class="col-md-4 mb-4">
                   <img src="assets/images/checkmark.png" class="check-icon" alt="Check" />
                   <h4 class="fw-bold">Our Mission</h4>
@@ -66,8 +112,6 @@
                     technology, while delivering lasting value and satisfaction to our customers through efficient strategies.
                   </p>
                 </div>
-          
-                <!-- Vision -->
                 <div class="col-md-4 mb-4">
                   <img src="assets/images/checkmark.png" class="check-icon" alt="Check" />
                   <h4 class="fw-bold">Our Vision</h4>
@@ -77,8 +121,6 @@
                     delivering diverse solutions, and consistently exceeding customer expectations.
                   </p>
                 </div>
-          
-                <!-- Values -->
                 <div class="col-md-4 mb-4">
                   <img src="assets/images/checkmark.png" class="check-icon" alt="Check" />
                   <h4 class="fw-bold">Our Values</h4>
@@ -91,7 +133,7 @@
             </div>
           </section>
     </div>
-    <div>
+    <div id="services">
         <section class="services-section py-5">
             <div class="container">
               <h2 class="section-heading">
@@ -129,7 +171,7 @@
             </div>
           </section>                   
     </div>
-    <div>
+    <div id="why-us">
         <section class="mv-section">
             <h2><span>Why We are the</span> <span class="text-orange"> Right Choice</span></h2>
             <div class="container">
@@ -165,32 +207,19 @@
             </div>
           </section>          
     </div>
-    <div>
+    <div id="contact">
         <section class="contact-us">
             <div class="contact-heading">
               <h2>Contact <span>Us</span></h2>
               <p>Join along with us in pushing dimensions beyond boundaries and that is what we do every day in Jamari Shipping.</p>
-            </div>
-          
-            <div class="contact-cards">
-              <div class="contact-card">
-                <h3>Chennai</h3>
-                <p>Jamari Shipping Pvt. Ltd.<br>
-                No:20, 2nd Main Road,<br>
-                Opp. SBI Bank, Arumbakkam,<br>
-                Chennai - 600006.</p>
-          
-                <p>📞 +91 89250 35777</p>
-              </div>
             </div>
           </section>
     </div>
     <div>
         <footer class="footer">
             <div class="footer-container">
-              <!-- Logo and About -->
               <div class="footer-section about">
-                <img src="assets/images/JAMARI LOGISTIC3.png" alt="Osprey Shipping Logo" class="logo" />
+                <img src="assets/images/JAMARI.png" alt="Osprey Shipping Logo" class="logo" />
                 <p>
                   Jamari Shipping Pvt Ltd, a leading company in project cargo logistics.
                   We started our company with our deeply rooted passion for project
@@ -200,36 +229,29 @@
                   India.
                 </p>
               </div>
-          
-              <!-- Contact Info -->
               <div class="footer-section contact">
                 <h4>Reach Us</h4>
-                <p>
-                  Jamari Shipping Pvt. Ltd.<br />
-                </p>
-                <p><strong>E-MAIL:</strong></p>
-                <!-- <p><a href="mailto:sales1.mum@ospreyshipping.com">sales1.mum@ospreyshipping.com</a></p>
-                <p><a href="mailto:cs.mum@ospreyshipping.com">cs.mum@ospreyshipping.com</a></p> -->
+                <p>Jamari Shipping Pvt. Ltd.<br>
+                No:20, 2nd Main Road,<br>
+                Opp. SBI Bank, Arumbakkam,<br>
+                Chennai - 600006.</p>
+                <p><strong>E-MAIL:</strong><a href="mailto:lokeshshipping98@gmail.com">lokeshshipping98@gmail.com</a></p>
                 <p><strong>Phone:</strong> <a href="tel:+918925035777">+91 89250 35777</a></p>
               </div>
-          
-              <!-- Quick Links -->
               <div class="footer-section links">
                 <h4>Quick Links</h4>
-                <ul>
-                  <li><a href="#">Home</a></li>
-                  <li><a href="#">About Us</a></li>
-                  <li><a href="#">Services</a></li>
-                  <li><a href="#">Contact Us</a></li>
-                  <li><a href="#">Why Choose Us</a></li>
+                <ul class="quicklinks">
+                  <li><a href="#home">Home</a></li>
+                  <li><a href="#about">About Us</a></li>
+                  <li><a href="#services">Services</a></li>
+                  <li><a href="#contact">Contact Us</a></li>
+                  <li><a href="#why-us">Why Choose Us</a></li>
                 </ul>
               </div>
-          
-              <!-- Social Media -->
               <div class="footer-section social">
                 <h4>Social Links</h4>
                 <div class="social-icons">
-                  <a href="#"><mat-icon class="fab fa-linkedin-in"></mat-icon></a>
+                  <a href="#"><i class="fab fa-linkedin-in"></i></a>  
                   <a href="#"><i class="fab fa-instagram"></i></a>
                   <a href="#"><i class="fab fa-facebook-f"></i></a>
                   <a href="#"><i class="fab fa-youtube"></i></a>
@@ -243,8 +265,4 @@
     <div class="footer-bottom">
         <p>Copyright © {{currentYear}} Jamari Shipping Pvt. Ltd. All Rights Reserved.</p>
     </div>
-      
-    <!-- <div>
-        <router-outlet></router-outlet>
-    </div> -->
 </div>
